Improved analiza_wynikow.txt file

--- a/statistical_tests.ipynb
+++ b/statistical_tests.ipynb
@@ -10,10 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e77a6f58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jakub\\anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "c:\\Users\\jakub\\anaconda3\\lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.4' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -35,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "646a3231",
    "metadata": {},
    "outputs": [],
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "511178f5",
    "metadata": {},
    "outputs": [],
@@ -81,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "f8ddda9e",
    "metadata": {},
    "outputs": [],
@@ -161,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "61e81c7a",
    "metadata": {},
    "outputs": [],
@@ -388,12 +399,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "10cb5dfc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Funkcja zapisująca analizy do pliku txt\n",
     "def save_analysis_to_file(output_file='analiza_wynikow.txt', random_seed=42):\n",
     "    # Przechwytujemy wszystkie wyniki analizy do bufora\n",
     "    output_buffer = io.StringIO()\n",
@@ -413,13 +423,207 @@
     "        print(f\"Unikalne relacje: {df['Relationship_Name'].unique()}\")\n",
     "        print(f\"Procent ukończonych podejść: {(df['Track_Completed'] == True).mean() * 100:.2f}%\")\n",
     "        \n",
+    "        # Dodanie objaśnienia testów statystycznych\n",
+    "        print(\"\\n\" + \"=\"*80)\n",
+    "        print(\"OBJAŚNIENIE TESTÓW STATYSTYCZNYCH\")\n",
+    "        print(\"=\"*80)\n",
+    "        print(\"\"\"\n",
+    "W analizie zastosowano następujące testy statystyczne:\n",
+    "\n",
+    "1. Test Kruskala-Wallisa:\n",
+    "   - Jest to nieparametryczny odpowiednik jednoczynnikowej analizy wariancji (ANOVA).\n",
+    "   - Hipoteza zerowa (H0): nie ma istotnych różnic między mediany czasów ukończenia zadań\n",
+    "     w różnych grupach (wiekowych lub relacji).\n",
+    "   - Hipoteza alternatywna (H1): istnieje przynajmniej jedna para grup, których mediany\n",
+    "     czasów ukończenia różnią się istotnie.\n",
+    "   - Interpretacja: jeśli p-wartość < 0.05, odrzucamy hipotezę zerową, co oznacza, że przynajmniej\n",
+    "     jedna para grup różni się istotnie.\n",
+    "\n",
+    "2. Test Wilcoxona (dla par grup):\n",
+    "   - Jest to nieparametryczny test dla par grup, odpowiednik testu t-Studenta dla prób zależnych.\n",
+    "   - Hipoteza zerowa (H0): nie ma istotnej różnicy między medianami czasów ukończenia\n",
+    "     w porównywanych dwóch grupach.\n",
+    "   - Hipoteza alternatywna (H1): mediany czasów ukończenia różnią się istotnie między grupami.\n",
+    "   - Interpretacja: jeśli p-wartość < 0.05, odrzucamy hipotezę zerową, co oznacza, że\n",
+    "     czasy ukończenia w obu grupach różnią się istotnie.\n",
+    "\n",
+    "Poziom istotności:\n",
+    "- We wszystkich testach przyjęto standardowy poziom istotności α = 0.05 (5%).\n",
+    "- Oznacza to, że wyniki są uznawane za statystycznie istotne, gdy p-wartość < 0.05.\n",
+    "- W takim przypadku, z 95% pewnością możemy stwierdzić, że zaobserwowane różnice\n",
+    "  nie są dziełem przypadku.\n",
+    "\n",
+    "Zrównoważony sampling:\n",
+    "- Aby zapewnić rzetelność porównań między grupami o różnej liczności, zastosowano\n",
+    "  technikę zrównoważonego samplingu.\n",
+    "- Polega ona na losowym wyborze równej liczby obserwacji z każdej grupy,\n",
+    "  co eliminuje efekt nierównomiernego rozkładu danych.\n",
+    "- Liczba obserwacji w każdej grupie po samplingu jest równa minimalnej liczności grupy\n",
+    "  (ale nie mniejsza niż 10 obserwacji, o ile to możliwe).\n",
+    "- Gwarantuje to, że wyniki testów nie są zaburzone przez nierównomierne rozłożenie danych.\n",
+    "        \"\"\")\n",
+    "        \n",
     "        # Analiza wpływu wieku i relacji na wyniki z zrównoważonym samplingiem\n",
-    "        print(\"\\nUWAGA: W testach Wilcoxona zastosowano zrównoważony sampling, aby zapewnić równą liczność grup.\")\n",
+    "        print(\"\\nAnaliza statystyczna:\")\n",
+    "        print(\"UWAGA: W testach Wilcoxona zastosowano zrównoważony sampling, aby zapewnić równą liczność grup.\")\n",
     "        results = analyze_performance(df, random_seed)\n",
     "        \n",
-    "        # Wizualizacja wyników (nie wyświetlamy w pliku)\n",
-    "        print(\"\\nWizualizacja wyników:\")\n",
-    "        print(\"Wykresy zostały zapisane do plików 'age_group_boxplots.png' i 'relationship_boxplots.png'.\")\n",
+    "        # Dodanie interpretacji wyników\n",
+    "        print(\"\\n\" + \"=\"*80)\n",
+    "        print(\"INTERPRETACJA WYNIKÓW\")\n",
+    "        print(\"=\"*80)\n",
+    "        \n",
+    "        # Interpretacja dla wszystkich torów łącznie\n",
+    "        print(\"\\nInterpretacja dla wszystkich torów łącznie:\")\n",
+    "        \n",
+    "        # Pobieranie wyników Kruskala-Wallisa dla wszystkich danych\n",
+    "        kw_age_x_all = results.get('all_tracks', {}).get('kruskal_age_x', {'p_value': None, 'significant': None})\n",
+    "        kw_age_y_all = results.get('all_tracks', {}).get('kruskal_age_y', {'p_value': None, 'significant': None})\n",
+    "        kw_rel_all = results.get('all_tracks', {}).get('kruskal_rel', {'p_value': None, 'significant': None})\n",
+    "        \n",
+    "        if kw_age_x_all['p_value'] is not None:\n",
+    "            print(f\"\\n1. Wpływ wieku uczestnika X na czas ukończenia:\")\n",
+    "            if kw_age_x_all['significant']:\n",
+    "                print(f\"   - Test Kruskala-Wallisa wykazał istotne różnice między grupami wiekowymi uczestnika X (p = {kw_age_x_all['p_value']:.4f}).\")\n",
+    "                print(f\"   - Oznacza to, że wiek uczestnika X ma znaczący wpływ na czas ukończenia zadań.\")\n",
+    "            else:\n",
+    "                print(f\"   - Test Kruskala-Wallisa nie wykazał istotnych różnic między grupami wiekowymi uczestnika X (p = {kw_age_x_all['p_value']:.4f}).\")\n",
+    "                print(f\"   - Oznacza to, że wiek uczestnika X nie ma istotnego wpływu na czas ukończenia zadań.\")\n",
+    "        \n",
+    "        if kw_age_y_all['p_value'] is not None:\n",
+    "            print(f\"\\n2. Wpływ wieku uczestnika Y na czas ukończenia:\")\n",
+    "            if kw_age_y_all['significant']:\n",
+    "                print(f\"   - Test Kruskala-Wallisa wykazał istotne różnice między grupami wiekowymi uczestnika Y (p = {kw_age_y_all['p_value']:.4f}).\")\n",
+    "                print(f\"   - Oznacza to, że wiek uczestnika Y ma znaczący wpływ na czas ukończenia zadań.\")\n",
+    "            else:\n",
+    "                print(f\"   - Test Kruskala-Wallisa nie wykazał istotnych różnic między grupami wiekowymi uczestnika Y (p = {kw_age_y_all['p_value']:.4f}).\")\n",
+    "                print(f\"   - Oznacza to, że wiek uczestnika Y nie ma istotnego wpływu na czas ukończenia zadań.\")\n",
+    "        \n",
+    "        if kw_rel_all['p_value'] is not None:\n",
+    "            print(f\"\\n3. Wpływ relacji między uczestnikami na czas ukończenia:\")\n",
+    "            if kw_rel_all['significant']:\n",
+    "                print(f\"   - Test Kruskala-Wallisa wykazał istotne różnice między typami relacji (p = {kw_rel_all['p_value']:.4f}).\")\n",
+    "                print(f\"   - Oznacza to, że rodzaj relacji między uczestnikami ma znaczący wpływ na czas ukończenia zadań.\")\n",
+    "            else:\n",
+    "                print(f\"   - Test Kruskala-Wallisa nie wykazał istotnych różnic między typami relacji (p = {kw_rel_all['p_value']:.4f}).\")\n",
+    "                print(f\"   - Oznacza to, że rodzaj relacji między uczestnikami nie ma istotnego wpływu na czas ukończenia zadań.\")\n",
+    "        \n",
+    "        # Interpretacja dla poszczególnych torów\n",
+    "        print(\"\\nInterpretacja dla poszczególnych torów:\")\n",
+    "        \n",
+    "        for track_id in results.get('age_groups', {}):\n",
+    "            print(f\"\\n=== Tor {track_id} ===\")\n",
+    "            \n",
+    "            # Interpretacja dla wieku X\n",
+    "            kw_age_x = results['age_groups'][track_id].get('kruskal_x', {'p_value': None, 'significant': None})\n",
+    "            wilcoxon_x = results['age_groups'][track_id].get('wilcoxon_x', [])\n",
+    "            \n",
+    "            print(f\"\\n1. Wpływ wieku uczestnika X na czas ukończenia:\")\n",
+    "            if kw_age_x['p_value'] is not None and not np.isnan(kw_age_x['p_value']):\n",
+    "                if kw_age_x['significant']:\n",
+    "                    print(f\"   - Test Kruskala-Wallisa wykazał istotne różnice między grupami wiekowymi (p = {kw_age_x['p_value']:.4f}).\")\n",
+    "                    print(f\"   - Oznacza to, że wiek uczestnika X ma znaczący wpływ na czas ukończenia zadań w torze {track_id}.\")\n",
+    "                    \n",
+    "                    # Dodajemy szczegółowe informacje o parach grup\n",
+    "                    significant_pairs = [res for res in wilcoxon_x if res.get('significant', False) and not np.isnan(res.get('p_value', np.nan))]\n",
+    "                    if significant_pairs:\n",
+    "                        print(f\"   - Szczegółowa analiza par grup wykazała istotne różnice między:\")\n",
+    "                        for pair in significant_pairs:\n",
+    "                            print(f\"     * {pair['group1']} vs {pair['group2']} (p = {pair['p_value']:.4f}):\")\n",
+    "                            if pair['median1_original'] < pair['median2_original']:\n",
+    "                                print(f\"       Grupa {pair['group1']} osiągała lepsze czasy (mediana: {pair['median1_original']:.2f}s) niż grupa {pair['group2']} (mediana: {pair['median2_original']:.2f}s).\")\n",
+    "                            else:\n",
+    "                                print(f\"       Grupa {pair['group2']} osiągała lepsze czasy (mediana: {pair['median2_original']:.2f}s) niż grupa {pair['group1']} (mediana: {pair['median1_original']:.2f}s).\")\n",
+    "                else:\n",
+    "                    print(f\"   - Test Kruskala-Wallisa nie wykazał istotnych różnic między grupami wiekowymi (p = {kw_age_x['p_value']:.4f}).\")\n",
+    "                    print(f\"   - Oznacza to, że wiek uczestnika X nie ma istotnego wpływu na czas ukończenia zadań w torze {track_id}.\")\n",
+    "            else:\n",
+    "                print(f\"   - Brak wystarczających danych do przeprowadzenia analizy.\")\n",
+    "            \n",
+    "            # Interpretacja dla wieku Y\n",
+    "            kw_age_y = results['age_groups'][track_id].get('kruskal_y', {'p_value': None, 'significant': None})\n",
+    "            wilcoxon_y = results['age_groups'][track_id].get('wilcoxon_y', [])\n",
+    "            \n",
+    "            print(f\"\\n2. Wpływ wieku uczestnika Y na czas ukończenia:\")\n",
+    "            if kw_age_y['p_value'] is not None and not np.isnan(kw_age_y['p_value']):\n",
+    "                if kw_age_y['significant']:\n",
+    "                    print(f\"   - Test Kruskala-Wallisa wykazał istotne różnice między grupami wiekowymi (p = {kw_age_y['p_value']:.4f}).\")\n",
+    "                    print(f\"   - Oznacza to, że wiek uczestnika Y ma znaczący wpływ na czas ukończenia zadań w torze {track_id}.\")\n",
+    "                    \n",
+    "                    # Dodajemy szczegółowe informacje o parach grup\n",
+    "                    significant_pairs = [res for res in wilcoxon_y if res.get('significant', False) and not np.isnan(res.get('p_value', np.nan))]\n",
+    "                    if significant_pairs:\n",
+    "                        print(f\"   - Szczegółowa analiza par grup wykazała istotne różnice między:\")\n",
+    "                        for pair in significant_pairs:\n",
+    "                            print(f\"     * {pair['group1']} vs {pair['group2']} (p = {pair['p_value']:.4f}):\")\n",
+    "                            if pair['median1_original'] < pair['median2_original']:\n",
+    "                                print(f\"       Grupa {pair['group1']} osiągała lepsze czasy (mediana: {pair['median1_original']:.2f}s) niż grupa {pair['group2']} (mediana: {pair['median2_original']:.2f}s).\")\n",
+    "                            else:\n",
+    "                                print(f\"       Grupa {pair['group2']} osiągała lepsze czasy (mediana: {pair['median2_original']:.2f}s) niż grupa {pair['group1']} (mediana: {pair['median1_original']:.2f}s).\")\n",
+    "                else:\n",
+    "                    print(f\"   - Test Kruskala-Wallisa nie wykazał istotnych różnic między grupami wiekowymi (p = {kw_age_y['p_value']:.4f}).\")\n",
+    "                    print(f\"   - Oznacza to, że wiek uczestnika Y nie ma istotnego wpływu na czas ukończenia zadań w torze {track_id}.\")\n",
+    "            else:\n",
+    "                print(f\"   - Brak wystarczających danych do przeprowadzenia analizy.\")\n",
+    "            \n",
+    "            # Interpretacja dla relacji\n",
+    "            kw_rel = results['relationships'][track_id].get('kruskal', {'p_value': None, 'significant': None})\n",
+    "            wilcoxon_rel = results['relationships'][track_id].get('wilcoxon', [])\n",
+    "            \n",
+    "            print(f\"\\n3. Wpływ relacji między uczestnikami na czas ukończenia:\")\n",
+    "            if kw_rel['p_value'] is not None and not np.isnan(kw_rel['p_value']):\n",
+    "                if kw_rel['significant']:\n",
+    "                    print(f\"   - Test Kruskala-Wallisa wykazał istotne różnice między typami relacji (p = {kw_rel['p_value']:.4f}).\")\n",
+    "                    print(f\"   - Oznacza to, że rodzaj relacji między uczestnikami ma znaczący wpływ na czas ukończenia zadań w torze {track_id}.\")\n",
+    "                    \n",
+    "                    # Dodajemy szczegółowe informacje o parach relacji\n",
+    "                    significant_pairs = [res for res in wilcoxon_rel if res.get('significant', False) and not np.isnan(res.get('p_value', np.nan))]\n",
+    "                    if significant_pairs:\n",
+    "                        print(f\"   - Szczegółowa analiza par relacji wykazała istotne różnice między:\")\n",
+    "                        for pair in significant_pairs:\n",
+    "                            print(f\"     * {pair['group1']} vs {pair['group2']} (p = {pair['p_value']:.4f}):\")\n",
+    "                            if pair['median1_original'] < pair['median2_original']:\n",
+    "                                print(f\"       Relacja '{pair['group1']}' osiągała lepsze czasy (mediana: {pair['median1_original']:.2f}s) niż relacja '{pair['group2']}' (mediana: {pair['median2_original']:.2f}s).\")\n",
+    "                            else:\n",
+    "                                print(f\"       Relacja '{pair['group2']}' osiągała lepsze czasy (mediana: {pair['median2_original']:.2f}s) niż relacja '{pair['group1']}' (mediana: {pair['median1_original']:.2f}s).\")\n",
+    "                else:\n",
+    "                    print(f\"   - Test Kruskala-Wallisa nie wykazał istotnych różnic między typami relacji (p = {kw_rel['p_value']:.4f}).\")\n",
+    "                    print(f\"   - Oznacza to, że rodzaj relacji między uczestnikami nie ma istotnego wpływu na czas ukończenia zadań w torze {track_id}.\")\n",
+    "            else:\n",
+    "                print(f\"   - Brak wystarczających danych do przeprowadzenia analizy.\")\n",
+    "        \n",
+    "        # Podsumowanie\n",
+    "        print(\"\\n\" + \"=\"*80)\n",
+    "        print(\"PODSUMOWANIE\")\n",
+    "        print(\"=\"*80)\n",
+    "        print(\"\"\"\n",
+    "1. Interpretacja p-wartości:\n",
+    "   - p < 0.001: Bardzo silny dowód przeciwko hipotezie zerowej (***) - różnica jest wysoce istotna.\n",
+    "   - p < 0.01: Silny dowód przeciwko hipotezie zerowej (**) - różnica jest bardzo istotna.\n",
+    "   - p < 0.05: Wystarczający dowód przeciwko hipotezie zerowej (*) - różnica jest istotna.\n",
+    "   - p ≥ 0.05: Brak wystarczających dowodów przeciwko hipotezie zerowej - różnica nie jest istotna.\n",
+    "\n",
+    "2. Praktyczne znaczenie wyników:\n",
+    "   - Test statystyczny może wykazać istotność, ale należy rozważyć również praktyczne\n",
+    "     znaczenie różnic (np. czy różnica kilku sekund w czasie wykonania zadania jest istotna\n",
+    "     z praktycznego punktu widzenia).\n",
+    "   - Wielkość różnicy (efekt) jest równie ważna jak istotność statystyczna.\n",
+    "   - Duże próby mogą wykazywać istotne statystycznie, lecz małe praktycznie różnice.\n",
+    "\n",
+    "3. Ograniczenia analizy:\n",
+    "   - Nieparametryczne testy są bardziej odporne na odstające obserwacje i brak normalności,\n",
+    "     ale mają mniejszą moc statystyczną niż testy parametryczne.\n",
+    "   - Zrównoważony sampling może wpływać na wyniki, gdyż redukuje liczbę obserwacji.\n",
+    "   - Analizy przeprowadzono przy założonym poziomie istotności α = 0.05, co oznacza,\n",
+    "     że istnieje 5% ryzyko błędnego odrzucenia hipotezy zerowej (błąd I rodzaju).\n",
+    "\n",
+    "4. Zalecenia:\n",
+    "   - W przypadku istotnych różnic warto przeprowadzić dodatkowe badania na większej próbie.\n",
+    "   - Należy rozważyć zastosowanie korekty dla wielokrotnych porównań (np. metoda Bonferroniego),\n",
+    "     aby zmniejszyć ryzyko błędu I rodzaju przy porównywaniu wielu par grup.\n",
+    "   - Warto uwzględnić inne zmienne, które mogą wpływać na czas ukończenia zadań\n",
+    "     (np. doświadczenie uczestników, poziom trudności zadań itp.).\n",
+    "        \"\"\")\n",
     "        \n",
     "        print(\"\\nAnaliza zakończona.\")\n",
     "    \n",
@@ -436,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "9a83ce3a",
    "metadata": {},
    "outputs": [
